--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,13 @@ exclude = [ "target/*", "Cargo.lock" ]
 [features]
 general-category = []
 emoji = []
-default = ["general-category", "emoji"]
+icu = ["icu_properties", "icu_provider", "icu_collections", "zerovec", "litemap", "once_cell"]
+default = ["general-category", "emoji", "icu"]
 
 [dependencies]
+icu_collections = { version = "1.0.0", optional = true }
+icu_properties = {version = "1.0.0", optional = true}
+icu_provider = { version = "1.0.1", optional = true }
+litemap = { version = "0.6.0", optional = true }
+once_cell = { version = "1.15.0", optional = true }
+zerovec = { version = "0.9.0", optional = true }
